--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="05.objects/04.constructor.js"></script>
+    <script src="05.objects/10.punto.js"></script>
 </body>
 </html>
